@@ -15,10 +15,12 @@ from werkzeug.security import safe_join
 
 try:
     from pysqlite2 import dbapi2 as sqlite
+    from pysqlite2.dbapi2 import DatabaseError
     from pysqlite2.dbapi2 import IntegrityError as DatabaseIntegrityError
     from pysqlite2.dbapi2 import OperationalError as DatabaseOperationalError
 except ImportError:
     import sqlite3 as sqlite
+    from sqlite3 import DatabaseError
     from sqlite3 import IntegrityError as DatabaseIntegrityError
     from sqlite3 import OperationalError as DatabaseOperationalError
 from sql import Flavor, Table, Query, Expression, Literal, Null
@@ -30,10 +32,16 @@ from trytond.backend.database import DatabaseInterface, SQLType
 from trytond.config import config, parse_uri
 from trytond.transaction import Transaction
 
-__all__ = ['Database', 'DatabaseIntegrityError', 'DatabaseOperationalError']
+
+__all__ = ['Database', 'DatabaseIntegrityError', 'DatabaseOperationalError',
+    'DatabaseTimeoutError']
 logger = logging.getLogger(__name__)
 
 _default_name = config.get('database', 'default_name', default=':memory:')
+
+
+class DatabaseTimeoutError(Exception):
+    pass
 
 
 class SQLiteExtract(Function):
@@ -431,7 +439,8 @@ class Database(DatabaseInterface):
         db_uri = urllib.parse.urlunparse(db_uri)
         return db_uri.replace('sqlite', 'file', 1)
 
-    def get_connection(self, autocommit=False, readonly=False):
+    def get_connection(
+            self, autocommit=False, readonly=False, statement_timeout=None):
         if self._conn is None:
             self.connect()
         if autocommit:
